# Weather_App_CPP

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: ApiHandler.h  WeatherUI.h
src/: ApiHandler.cpp  WeatherUI.cpp  main.cpp
